Compress header images and fix on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -152,8 +152,8 @@ nav .logo, nav .logo:hover, nav ul.links li, nav ul.links li:hover, nav ul.socia
 
 header {
 	width: 100%;
-	max-height: 600px;
-	padding: 100px;
+	max-height: 500px;
+	padding: 150px;
 
 	h1 {
 		color: white;
@@ -168,6 +168,19 @@ header {
 		background-size: cover;
 	}
 }
+
+@media screen and (max-width: $device-width) {
+
+	header {
+		padding: 50px 0;
+
+		h1 {
+			margin: auto;
+			text-align: center;
+		}
+	}
+}
+
 
 
 
