--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ $background-color: white;
 $accent-color:     #3DC98C;
 
 // Width of the content area
-$device-width: 700px;
+$device-width: 900px;
 
 // Page List
 $pageList: about-us news our-projects media contact-us;
